--- a/drawsomething/index.html
+++ b/drawsomething/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" manifest="index.appcache">
 	<head>
 		<meta charset="utf-8" />
 		<title>DrawSomething para la Naci&oacute;n</title>
